src/test/ui/issues/issue-23302-3.stderr
error[E0391]: cycle detected when const checking `A`
  --> $DIR/issue-23302-3.rs:1:16
   |
LL | const A: i32 = B;
   |                ^
   |
note: ...which requires const checking `B`...
  --> $DIR/issue-23302-3.rs:3:16
   |
LL | const B: i32 = A;
   |                ^
   = note: ...which again requires const checking `A`, completing the cycle
note: cycle used when processing `A`
  --> $DIR/issue-23302-3.rs:1:1
   |
LL | const A: i32 = B;
   | ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
